V6.0.2
* Default message_type values added. You can now decide where the "kill message","Money message" and "Head message" will be displayed. Possible Values are: Chat, ActionBar, BassBar, Title, Subtitle or None. None if you dont want any message.
* Fix bug: Trident detected as fists - Ticket 420 (https://github.com/Rocologo/MobHunting/issues/420) 
V6.0.1
* For Bounty users - fixed SQL bug (https://github.com/Rocologo/MobHunting/issues/412)
* Removed a "null" message when clicking a non MobHunting head on a MC 1.13 server
* Added support for WorldGuard 7.0.0
* Added support for WorldEdit 7.0.0 
* Custom WorldGuard flag MobHunting - tested and fixed. 
* Support for Disguises fixed.
V6.0.0 Minecraft 1.13 release
* This version is only for MC 1.13
* Dolphin, Drowned, Phantom, Turtle and Fish (as a Mob) added with rewards and Mob heads to be dropped
* BagOfGold uses MUST upgrade to V2.0.0 (https://fractal.lindegaard.one:8181/job/BagOfGold/)
V5.7.3
*
V5.7.2
* Minor change
V5.7.1
* Fixed Ticket 409 (https://github.com/Rocologo/MobHunting/issues/409)
* Changed how data was stored in the database (Same order as they were inserted).
V5.7.0
* Fixed bStarts.org redirecting 
* BagOfGold balance fixed when changing gamemode - PerWorldInventory is mandatory if you change worlds/gamemode
V5.6.9
* Fixed bStarts.org reporting
V5.6.7
* Fixed ticket 408 (https://github.com/Rocologo/MobHunting/issues/408) 
V5.6.6
* Fix bug where all normal Minecraft mobs was detected as a Elitemob.
V5.6.5
* Added Support for EliteMobs
* Removed MCstats.org Metrics completely
* BagOfGold can now be used in both Survival and Creative mode. PerWorldInventory or similar plugin is strongly recommended. 
V5.6.4
* Added test for Worldguard 6.2+ (MobHunting only support WG 6.2 and newer)
* Fixed MobArena bug
* Fixed ticket 408 (https://github.com/Rocologo/MobHunting/issues/408)
V5.6.3
* Added support for CMIHolograms