@@ -10,6 +10,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
 import one.lindegaard.MobHunting.MobHunting;
+import one.lindegaard.MobHunting.compatibility.ProtocolLibCompat;
 import one.lindegaard.MobHunting.compatibility.ProtocolLibHelper;
 import one.lindegaard.MobHunting.grinding.Area;
 
@@ -18,7 +19,7 @@ public class WhitelistAreaCommand implements ICommand {
 	private MobHunting plugin;
 
 	public WhitelistAreaCommand(MobHunting plugin) {
-		this.plugin=plugin;
+		this.plugin = plugin;
 	}
 
 	@Override
@@ -63,23 +64,26 @@ public class WhitelistAreaCommand implements ICommand {
 
 		if (args.length == 0) {
 			if (plugin.getGrindingManager().isWhitelisted(loc)) {
-				plugin.getMessages().senderSendMessage(sender,
-						ChatColor.GREEN + plugin.getMessages().getString("mobhunting.commands.whitelistarea.iswhitelisted"));
+				plugin.getMessages().senderSendMessage(sender, ChatColor.GREEN
+						+ plugin.getMessages().getString("mobhunting.commands.whitelistarea.iswhitelisted"));
 				Area area = plugin.getGrindingManager().getWhitelistArea(loc);
-				ProtocolLibHelper.showGrindingArea((Player) sender, area, loc);
+				if (ProtocolLibCompat.isSupported())
+					ProtocolLibHelper.showGrindingArea((Player) sender, area, loc);
 			} else
-				plugin.getMessages().senderSendMessage(sender,
-						ChatColor.RED + plugin.getMessages().getString("mobhunting.commands.whitelistarea.notwhitelisted"));
+				plugin.getMessages().senderSendMessage(sender, ChatColor.RED
+						+ plugin.getMessages().getString("mobhunting.commands.whitelistarea.notwhitelisted"));
 		} else if (args.length == 1) {
 			if (args[0].equalsIgnoreCase("remove")) {
 				plugin.getGrindingManager().unWhitelistArea(loc);
-				plugin.getMessages().senderSendMessage(sender,
-						ChatColor.GREEN + plugin.getMessages().getString("mobhunting.commands.whitelistarea.remove.done"));
+				plugin.getMessages().senderSendMessage(sender, ChatColor.GREEN
+						+ plugin.getMessages().getString("mobhunting.commands.whitelistarea.remove.done"));
 			} else if (args[0].equalsIgnoreCase("add")) {
 				Area area = new Area(loc, plugin.getConfigManager().grindingDetectionRange, 0);
 				plugin.getGrindingManager().whitelistArea(area);
-				plugin.getMessages().senderSendMessage(sender,ChatColor.GREEN + plugin.getMessages().getString("mobhunting.commands.whitelistarea.done"));
-				ProtocolLibHelper.showGrindingArea((Player) sender, area, loc);
+				plugin.getMessages().senderSendMessage(sender,
+						ChatColor.GREEN + plugin.getMessages().getString("mobhunting.commands.whitelistarea.done"));
+				if (ProtocolLibCompat.isSupported())
+					ProtocolLibHelper.showGrindingArea((Player) sender, area, loc);
 			} else
 				return false;
 		} else
